--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,7 @@ http {
         listen 80;
         charset utf-8;
 
-        server_name localhost;
+        server_name uk-blog.tapeline.dev;
 
         location / {
             proxy_redirect     off;
